--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.2.4",
+    "@react-navigation/stack": "^5.2.19",
     "@unform/core": "^2.1.0",
     "axios": "^0.19.2",
     "eslint-plugin-react-hooks": "2.5.0",
     "polished": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.7.0",
     "styled-components": "^5.1.0",
     "uuidv4": "^6.0.8",
     "yup": "^0.28.5"
