--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
     "eslint-plugin-react-hooks": "2.5.0",
     "polished": "^3.6.0",
