--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,9 +27,11 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-    "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
+    "no-unused-expressions": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
